// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`XCM > frequency send horizontal messages to AssetHub > AssetHub chain xcm events 1`] = `[]`;

exports[`XCM > frequency send horizontal messages to AssetHub > assethub-final-balance 1`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 0,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 0,
  "sufficients": 0,
}
`;

exports[`XCM > frequency send horizontal messages to AssetHub > frequency-after-send 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": 9999995419260,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 2,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`XCM > frequency send horizontal messages to AssetHub > frequency-final-balance 1`] = `
{
  "balance": 39030000000,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`XCM > frequency send horizontal messages to AssetHub > initial-events 1`] = `
[
  {
    "data": {
      "dispatchInfo": {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 2000)",
          "refTime": "(rounded 280000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 98000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
  {
    "data": {
      "amount": "(rounded 1900000)",
      "who": "f6adGoezY4QWXCbz5EK8wfTJ8FLyCUtnW4KMiWbj9ugXKgYbC",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {
      "assetId": {
        "interior": "Here",
        "parents": 1,
      },
      "balance": 50000000000,
      "owner": "f6adGoezY4QWXCbz5EK8wfTJ8FLyCUtnW4KMiWbj9ugXKgYbC",
    },
    "method": "Burned",
    "section": "foreignAssets",
  },
  {
    "data": {
      "outcome": {
        "Complete": {
          "used": {
            "proofSize": "(rounded 4800)",
            "refTime": "(rounded 470000000)",
          },
        },
      },
    },
    "method": "Attempted",
    "section": "polkadotXcm",
  },
  {
    "data": {
      "assetId": {
        "interior": "Here",
        "parents": 1,
      },
      "balance": "(rounded 31000000000)",
      "owner": "f6adGoezY4QWXCbz5EK8wfTJ8FLyCUtnW4KMiWbj9ugXKgYbC",
    },
    "method": "Burned",
    "section": "foreignAssets",
  },
  {
    "data": {
      "amount": "(rounded 31000000000)",
      "assetId": {
        "interior": "Here",
        "parents": 1,
      },
      "owner": "f6a1KBtrm86y5y1uxmbmEg14HDpaTTo9ww6JLdZhNPNXMJkUY",
    },
    "method": "Issued",
    "section": "foreignAssets",
  },
  {
    "data": {
      "fees": [
        {
          "fun": {
            "Fungible": "(rounded 31000000000)",
          },
          "id": {
            "interior": "Here",
            "parents": 1,
          },
        },
      ],
      "paying": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": {
                  "ByGenesis": "(hash)",
                },
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "FeesPaid",
    "section": "polkadotXcm",
  },
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": 1000,
            },
          ],
        },
        "parents": 1,
      },
      "message": [
        {
          "WithdrawAsset": [
            {
              "fun": {
                "Fungible": 50000000000,
              },
              "id": {
                "interior": "Here",
                "parents": 1,
              },
            },
          ],
        },
        "ClearOrigin",
        {
          "BuyExecution": {
            "fees": {
              "fun": {
                "Fungible": 50000000000,
              },
              "id": {
                "interior": "Here",
                "parents": 1,
              },
            },
            "weightLimit": "Unlimited",
          },
        },
        {
          "DepositAsset": {
            "assets": {
              "Wild": {
                "AllCounted": 1,
              },
            },
            "beneficiary": {
              "interior": {
                "X1": [
                  {
                    "AccountId32": {
                      "id": "(hash)",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 0,
            },
          },
        },
      ],
      "messageId": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": {
                  "ByGenesis": "(hash)",
                },
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "polkadotXcm",
  },
  {
    "data": {
      "actualFee": "(rounded 1900000)",
      "tip": 0,
      "who": "f6adGoezY4QWXCbz5EK8wfTJ8FLyCUtnW4KMiWbj9ugXKgYbC",
    },
    "method": "TransactionFeePaid",
    "section": "transactionPayment",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1300000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`XCM > frequency send horizontal messages to AssetHub > initial-events-force-subscribe-version-notify 1`] = `
[
  {
    "data": {
      "dispatchInfo": {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 2000)",
          "refTime": "(rounded 280000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 98000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
  {
    "data": {
      "who": "f6adGoezY4QWXCbz5EK8wfTJ8FLyCUtnW4KMiWbj9ugXKgYbC",
    },
    "method": "Upgraded",
    "section": "balances",
  },
  {
    "data": {
      "account": "f6adGoezY4QWXCbz5EK8wfTJ8FLyCUtnW4KMiWbj9ugXKgYbC",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "f6adGoezY4QWXCbz5EK8wfTJ8FLyCUtnW4KMiWbj9ugXKgYbC",
      "freeBalance": "(rounded 10000000000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 1300000)",
      "who": "f6adGoezY4QWXCbz5EK8wfTJ8FLyCUtnW4KMiWbj9ugXKgYbC",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {
      "actualFee": "(rounded 1300000)",
      "tip": 0,
      "who": "f6adGoezY4QWXCbz5EK8wfTJ8FLyCUtnW4KMiWbj9ugXKgYbC",
    },
    "method": "TransactionFeePaid",
    "section": "transactionPayment",
  },
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1100000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
  {
    "data": {
      "amount": "(rounded 1300000)",
      "who": "f6adGoezY4QWXCbz5EK8wfTJ8FLyCUtnW4KMiWbj9ugXKgYbC",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {
      "actualFee": "(rounded 1300000)",
      "tip": 0,
      "who": "f6adGoezY4QWXCbz5EK8wfTJ8FLyCUtnW4KMiWbj9ugXKgYbC",
    },
    "method": "TransactionFeePaid",
    "section": "transactionPayment",
  },
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1100000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`XCM > frequency send horizontal messages to AssetHub > initial-events-taco 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
  {
    "data": {
      "cost": [
        {
          "fun": {
            "Fungible": "(rounded 30000000000)",
          },
          "id": {
            "interior": "Here",
            "parents": 1,
          },
        },
      ],
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": 1000,
            },
          ],
        },
        "parents": 1,
      },
      "messageId": "(hash)",
    },
    "method": "VersionNotifyRequested",
    "section": "polkadotXcm",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 2000)",
          "refTime": "(rounded 280000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 98000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`XCM > frequency send horizontal messages to AssetHub > outbound-hrmp-messages 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v4": [
          {
            "withdrawAsset": [
              {
                "fun": {
                  "fungible": 50000000000,
                },
                "id": {
                  "interior": {
                    "here": null,
                  },
                  "parents": 1,
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 50000000000,
                },
                "id": {
                  "interior": {
                    "here": null,
                  },
                  "parents": 1,
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "allCounted": 1,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": [
                    {
                      "accountId32": {
                        "id": "0xd17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 0,
              },
            },
          },
          {
            "setTopic": "(redacted)",
          },
        ],
      },
    ],
    "recipient": 1000,
  },
]
`;

exports[`XCM > frequency send horizontal messages to AssetHub 1`] = `
{
  "balance": 120000000000,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;
